@@ -265,6 +265,7 @@ public class ZMSImplTest {
         dom.setDescription("old virginny");
         dom.setOrg("universities");
         dom.setYpmId(1930);
+        dom.setProductId("abcd-1930");
 
         List<String> admins = new ArrayList<>();
         admins.add(zmsTestInitializer.getAdminUser());
@@ -449,6 +450,7 @@ public class ZMSImplTest {
         dom.setDescription("bigun");
         dom.setOrg("bigdog");
         dom.setYpmId(999999);
+        dom.setProductId("abcd-999999");
 
         List<String> admins = new ArrayList<>();
         admins.add(zmsTestInitializer.getAdminUser());
@@ -495,6 +497,7 @@ public class ZMSImplTest {
         dom.setDescription("bigun");
         dom.setOrg("bigdog");
         dom.setYpmId(77777);
+        dom.setProductId("abcd-77777");
 
         List<String> admins = new ArrayList<>();
         admins.add(zmsTestInitializer.getAdminUser());
@@ -522,7 +525,7 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom2);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null);
         assertNotNull(domList);
 
         assertTrue(domList.getNames().contains("ListDom1".toLowerCase()));
@@ -546,13 +549,13 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                "1234", null, null, null, null, null, null, null, null, null);
+                "1234", null, null, null, null, null, null, null, null, null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                "1235", null, null, null, null, null, null, null, null, null);
+                "1235", null, null, null, null, null, null, null, null, null, null);
         assertNull(domList.getNames());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
@@ -572,13 +575,13 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, "azure1", null, null, null, null, null);
+                null, null, null, null, "azure1", null, null, null, null, null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, "azure2", null, null, null, null, null);
+                null, null, null, null, "azure2", null, null, null, null, null, null);
         assertNull(domList.getNames());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
@@ -599,13 +602,13 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, "gcp1", null, null, null, null);
+                null, null, null, null, null, "gcp1", null, null, null, null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, "gcp2", null, null, null, null);
+                null, null, null, null, null, "gcp2", null, null, null, null, null);
         assertNull(domList.getNames());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
@@ -630,7 +633,7 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom2);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, "sports", null);
+                null, null, null, null, null, null, null, null, "sports", null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName1);
@@ -641,7 +644,7 @@ public class ZMSImplTest {
         zmsImpl.putDomainMeta(ctx, domainName2, auditRef, dm);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, "sports", null);
+                null, null, null, null, null, null, null, null, "sports", null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 2);
         assertTrue(domList.getNames().contains(domainName1));
@@ -650,7 +653,7 @@ public class ZMSImplTest {
         // unknown service - no match
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, "unknown-service", null);
+                null, null, null, null, null, null, null, null, "unknown-service", null, null);
         assertNotNull(domList.getNames());
         assertTrue(domList.getNames().isEmpty());
 
@@ -674,16 +677,49 @@ public class ZMSImplTest {
         zmsImpl.putRole(ctx, domainName, roleName, auditRef, false, role);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, "user.user101", roleName, null, null, null, null, null, null);
+                null, null, "user.user101", roleName, null, null, null, null, null, null, null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null, null, null,
-                "user.user101", "unknown-role-name", null, null, null, null, null, null);
+                "user.user101", "unknown-role-name", null, null, null, null, null, null, null);
         assertTrue(domList.getNames().isEmpty());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
+    }
+
+    @Test
+    public void testGetDomainListByProductNumber() {
+
+        final String domainName = "lookupdomainbyproductnumber";
+        RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
+        final String auditRef = zmsTestInitializer.getAuditRef();
+
+        // enable product id support
+
+        System.setProperty(ZMSConsts.ZMS_PROP_PRODUCT_ID_SUPPORT, "true");
+        ZMSImpl zmsImpl = zmsTestInitializer.zmsInit();
+
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName,
+                "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        dom1.setYpmId(101);
+        dom1.setProductId("abcd-101");
+        zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
+
+        DomainList domList = zmsImpl.getDomainList(ctx, null, null, null,
+                null, null, 101, null, null, null, null, null, null, null, null, null);
+        assertNotNull(domList.getNames());
+        assertEquals(domList.getNames().size(), 1);
+        assertEquals(domList.getNames().get(0), domainName);
+
+        domList = zmsImpl.getDomainList(ctx, null, null, null, null, null,
+                102, null, null, null, null, null, null, null, null, null);
+        assertNull(domList.getNames());
+
+        zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
+        System.clearProperty(ZMSConsts.ZMS_PROP_PRODUCT_ID_SUPPORT);
+        zmsImpl.objectStore.clearConnections();
     }
 
     @Test
@@ -701,16 +737,17 @@ public class ZMSImplTest {
         TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName,
                 "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
         dom1.setYpmId(101);
+        dom1.setProductId("abcd-101");
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null,
-                null, null, 101, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, "abcd-101", null);
         assertNotNull(domList.getNames());
         assertEquals(domList.getNames().size(), 1);
         assertEquals(domList.getNames().get(0), domainName);
 
         domList = zmsImpl.getDomainList(ctx, null, null, null, null, null,
-                102, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, "abcd-=102", null);
         assertNull(domList.getNames());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
@@ -747,7 +784,7 @@ public class ZMSImplTest {
         // option so this will be tested in zms_system_test package
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null,
-                null, null, null, null, null, null, null, null, null, null, modifiedSince);
+                null, null, null, null, null, null, null, null, null, null, null, modifiedSince);
         assertNotNull(domList);
 
         assertTrue(domList.getNames().contains("ListDom2".toLowerCase()));
@@ -764,7 +801,7 @@ public class ZMSImplTest {
 
         try {
             zmsImpl.getDomainList(ctx, null, null, null, null, null,
-                    null, null, null, null, null, null, null, null, "abc");
+                    null, null, null, null, null, null, null, null, null, "abc");
             fail();
         } catch (ResourceException ex) {
             assertEquals(ex.getCode(), 400);
@@ -772,7 +809,7 @@ public class ZMSImplTest {
 
         try {
             zmsImpl.getDomainList(ctx, null, null, null, null, null,
-                    null, null, null, null, null, null, null, null, "May 20, 1099");
+                    null, null, null, null, null, null, null, null, null, "May 20, 1099");
             fail();
         } catch (ResourceException ex) {
             assertEquals(ex.getCode(), 400);
@@ -780,7 +817,7 @@ public class ZMSImplTest {
 
         try {
             zmsImpl.getDomainList(ctx, null, null, null, null, null,
-                    null, null, null, null, null, null, null, null, "03:03:20 PM");
+                    null, null, null, null, null, null, null, null, null, "03:03:20 PM");
             fail();
         } catch (ResourceException ex) {
             assertEquals(ex.getCode(), 400);
@@ -803,7 +840,7 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom2);
 
         DomainList domList = zmsImpl.getDomainList(ctx, 1, null, null,
-                null, null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null, null);
         assertEquals(1, domList.getNames().size());
 
         zmsImpl.deleteTopLevelDomain(ctx, "LimitDom1", auditRef);
@@ -830,18 +867,18 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom3);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null,
-                null, null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null, null);
         int size = domList.getNames().size();
         assertTrue(size > 3);
 
         // ask for only for 2 domains back
         domList = zmsImpl.getDomainList(ctx, 2, null, null, null, null,
-                null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null);
         assertEquals(domList.getNames().size(), 2);
 
         // ask for the remaining domains
         DomainList remList = zmsImpl.getDomainList(ctx, null, domList.getNext(),
-                null, null, null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null, null, null);
         assertEquals(remList.getNames().size(), size - 2);
 
         zmsImpl.deleteTopLevelDomain(ctx, "SkipDom1", auditRef);
@@ -865,7 +902,7 @@ public class ZMSImplTest {
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom2);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null,
-                "Prefix", null, null, null, null, null, null, null, null, null, null, null);
+                "Prefix", null, null, null, null, null, null, null, null, null, null, null, null);
 
         assertFalse(domList.getNames().contains("NoPrefixDom1".toLowerCase()));
         assertTrue(domList.getNames().contains("PrefixDom2".toLowerCase()));
@@ -894,7 +931,7 @@ public class ZMSImplTest {
         zmsImpl.postSubDomain(ctx, "DepthDom1.DepthDom2", auditRef, dom3);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null,
-                1, null, null, null, null, null, null, null, null, null, null);
+                1, null, null, null, null, null, null, null, null, null, null, null);
 
         assertTrue(domList.getNames().contains("DepthDom1".toLowerCase()));
         assertTrue(domList.getNames().contains("DepthDom1.DepthDom2".toLowerCase()));
@@ -913,7 +950,7 @@ public class ZMSImplTest {
 
         try {
             zmsImpl.getDomainList(ctx, -1, null, null, null, null, null, null,
-                    null, null, null, null, null, null, null);
+                    null, null, null, null, null, null, null, null);
             fail("requesterror not thrown.");
         } catch (ResourceException e) {
             assertEquals(e.getCode(), 400);
@@ -1606,7 +1643,7 @@ public class ZMSImplTest {
         assertion.setResource("sys.auth:instance");
         assertion.setEffect(AssertionEffect.ALLOW);
         assertion.setRole("sys.auth:role." + instanceProvidersRoleName);
-        List<Assertion> assertions = Arrays.asList(assertion);
+        List<Assertion> assertions = List.of(assertion);
         policy.setAssertions(assertions);
         zmsImpl.putPolicy(sysAdminCtx, "sys.auth", instanceProviderPolicyName, auditRef, false, policy);
     }
@@ -2000,6 +2037,7 @@ public class ZMSImplTest {
         assertNull(resDom1.getGroupExpiryDays());
         assertNull(resDom1.getTokenExpiryMins());
         assertNull(resDom1.getMemberPurgeExpiryDays());
+        assertNull(resDom1.getProductId());
 
         DomainMeta meta = zmsTestInitializer.createDomainMetaObject("Test2 Domain", "NewOrg",
                 true, true, "12345", 1001);
@@ -2008,6 +2046,7 @@ public class ZMSImplTest {
         meta.setRoleCertExpiryMins(200);
         meta.setMemberPurgeExpiryDays(90);
         meta.setSignAlgorithm("ec");
+        meta.setProductId("abcd-1234");
         zmsImpl.putDomainMeta(ctx, "MetaDom1", auditRef, meta);
         zmsImpl.putDomainSystemMeta(ctx, "MetaDom1", "auditenabled", auditRef, meta);
         zmsImpl.putDomainSystemMeta(ctx, "MetaDom1", "account", auditRef, meta);
@@ -2026,6 +2065,7 @@ public class ZMSImplTest {
         assertTrue(resDom3.getAuditEnabled());
         assertEquals(resDom3.getAccount(), "12345");
         assertEquals(Integer.valueOf(1001), resDom3.getYpmId());
+        assertEquals(resDom3.getProductId(), "abcd-1234");
         assertEquals(resDom3.getCertDnsDomain(), "yahoo.cloud");
         assertEquals(resDom3.getServiceCertExpiryMins(), Integer.valueOf(100));
         assertEquals(resDom3.getMemberPurgeExpiryDays(), Integer.valueOf(90));
@@ -2044,6 +2084,7 @@ public class ZMSImplTest {
         meta.setServiceExpiryDays(350);
         meta.setGroupExpiryDays(375);
         meta.setTokenExpiryMins(400);
+        meta.setProductId("abcd-1234");
         zmsImpl.putDomainMeta(ctx, "MetaDom1", auditRef, meta);
 
         resDom3 = zmsImpl.getDomain(ctx, "MetaDom1");
@@ -2054,6 +2095,7 @@ public class ZMSImplTest {
         assertTrue(resDom3.getEnabled());
         assertTrue(resDom3.getAuditEnabled());
         assertEquals(resDom3.getAccount(), "12345");
+        assertEquals(resDom3.getProductId(), "abcd-1234");
         assertEquals(Integer.valueOf(1001), resDom3.getYpmId());
         assertEquals(resDom3.getServiceCertExpiryMins(), Integer.valueOf(100));
         assertEquals(resDom3.getRoleCertExpiryMins(), Integer.valueOf(200));
@@ -2073,6 +2115,7 @@ public class ZMSImplTest {
                 true, true, "12345", 1001);
         Integer newProductId = ZMSTestInitializer.getRandomProductId();
         meta.setYpmId(newProductId);
+        meta.setProductId("abcd-1234-5678");
         meta.setServiceCertExpiryMins(5);
         meta.setRoleCertExpiryMins(0);
         meta.setMemberExpiryDays(15);
@@ -2091,6 +2134,7 @@ public class ZMSImplTest {
         assertTrue(resDom3.getEnabled());
         assertTrue(resDom3.getAuditEnabled());
         assertEquals(resDom3.getAccount(), "12345");
+        assertEquals(resDom3.getProductId(), "abcd-1234-5678");
         assertEquals(newProductId, resDom3.getYpmId());
         assertEquals(resDom3.getServiceCertExpiryMins(), Integer.valueOf(5));
         assertNull(resDom3.getRoleCertExpiryMins());
@@ -6681,7 +6725,6 @@ public class ZMSImplTest {
         zmsImpl.deleteTopLevelDomain(ctx, "ServiceAddInvalidStructDom1", auditRef);
     }
 
-
     @Test
     public void testPutServiceIdentityWithoutPubKey() {
         String domainName = "ServicePutDom1";
@@ -6725,7 +6768,8 @@ public class ZMSImplTest {
         publicKeyEntryNew.setId("1");
         publicKeyNewList.add(publicKeyEntryNew);
 
-        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg",
+                zmsTestInitializer.getAdminUser());
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         ServiceIdentity service = new ServiceIdentity();
@@ -6760,7 +6804,8 @@ public class ZMSImplTest {
         RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
         final String auditRef = zmsTestInitializer.getAuditRef();
 
-        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg",
+                zmsTestInitializer.getAdminUser());
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         ServiceIdentity service = new ServiceIdentity();
@@ -6784,7 +6829,8 @@ public class ZMSImplTest {
         RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
         final String auditRef = zmsTestInitializer.getAuditRef();
 
-        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg",
+                zmsTestInitializer.getAdminUser());
         zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
 
         ServiceIdentity service = new ServiceIdentity();
@@ -8447,7 +8493,7 @@ public class ZMSImplTest {
         zmsImpl.putPolicy(ctx, "signeddom1", "pol1", auditRef, false, pol);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null);
         List<String> domNames = domList.getNames();
         int numDoms = domNames.size();
 
@@ -19922,7 +19968,7 @@ public class ZMSImplTest {
         ResourceContext rsrcCtx1 = zmsTestInitializer.createResourceContext(principal);
         ZMSImpl zmsImpl = zmsTestInitializer.getZms();
         zmsImpl.getDomainList(rsrcCtx1, 100, null, null, 100, "account", 224, "roleMem1",
-                "role1", null, null, null, null, null, null);
+                "role1", null, null, null, null, null, null, null);
     }
 
     @Test
@@ -21652,38 +21698,38 @@ public class ZMSImplTest {
         ZMSImpl zmsImpl = zmsTestInitializer.zmsInit();
 
         // reserved names
-        assertFalse(zmsImpl.isValidServiceName("com"));
-        assertFalse(zmsImpl.isValidServiceName("gov"));
-        assertFalse(zmsImpl.isValidServiceName("info"));
-        assertFalse(zmsImpl.isValidServiceName("org"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "com"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "gov"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "info"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "org"));
 
-        assertTrue(zmsImpl.isValidServiceName("svc"));
-        assertTrue(zmsImpl.isValidServiceName("acom"));
-        assertTrue(zmsImpl.isValidServiceName("coms"));
-        assertTrue(zmsImpl.isValidServiceName("borg"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "svc"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "acom"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "coms"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "borg"));
 
         // service names with 1 or 2 chars
 
-        assertFalse(zmsImpl.isValidServiceName("u"));
-        assertFalse(zmsImpl.isValidServiceName("k"));
-        assertFalse(zmsImpl.isValidServiceName("r"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "u"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "k"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "r"));
 
-        assertFalse(zmsImpl.isValidServiceName("us"));
-        assertFalse(zmsImpl.isValidServiceName("uk"));
-        assertFalse(zmsImpl.isValidServiceName("fr"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "us"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "uk"));
+        assertFalse(zmsImpl.isValidServiceName("athenz", "fr"));
 
         // set the min length to 0 and verify all pass
 
         zmsImpl.serviceNameMinLength = 0;
-        assertTrue(zmsImpl.isValidServiceName("r"));
-        assertTrue(zmsImpl.isValidServiceName("us"));
-        assertTrue(zmsImpl.isValidServiceName("svc"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "r"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "us"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "svc"));
 
         // set map to null and verify all pass
 
         zmsImpl.reservedServiceNames = null;
-        assertTrue(zmsImpl.isValidServiceName("com"));
-        assertTrue(zmsImpl.isValidServiceName("gov"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "com"));
+        assertTrue(zmsImpl.isValidServiceName("athenz", "gov"));
 
         // create new impl objects with new settings
 
@@ -21691,20 +21737,50 @@ public class ZMSImplTest {
         System.setProperty(ZMSConsts.ZMS_PROP_SERVICE_NAME_MIN_LENGTH, "0");
         ZMSImpl zmsImpl2 = zmsTestInitializer.zmsInit();
 
-        assertTrue(zmsImpl2.isValidServiceName("com"));
-        assertTrue(zmsImpl2.isValidServiceName("gov"));
-        assertTrue(zmsImpl2.isValidServiceName("info"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "com"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "gov"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "info"));
 
-        assertFalse(zmsImpl2.isValidServiceName("one"));
-        assertFalse(zmsImpl2.isValidServiceName("two"));
+        assertFalse(zmsImpl2.isValidServiceName("athenz", "one"));
+        assertFalse(zmsImpl2.isValidServiceName("athenz", "two"));
 
-        assertTrue(zmsImpl2.isValidServiceName("u"));
-        assertTrue(zmsImpl2.isValidServiceName("k"));
-        assertTrue(zmsImpl2.isValidServiceName("r"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "u"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "k"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "r"));
         System.clearProperty(ZMSConsts.ZMS_PROP_RESERVED_SERVICE_NAMES);
         System.clearProperty(ZMSConsts.ZMS_PROP_SERVICE_NAME_MIN_LENGTH);
 
+        // validate service names with underscores set to allow
+
+        zmsImpl2.allowUnderscoreInServiceNames = new DynamicConfigBoolean(Boolean.TRUE);
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "service-name"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "service_name"));
+
+        // while to allow option is enabled, let's create a service with underscore
+
+        RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
+        final String auditRef = zmsTestInitializer.getAuditRef();
+
+        TopLevelDomain testDomain = zmsTestInitializer.createTopLevelDomainObject("athenz",
+                "Athenz Domain", "testOrg", zmsTestInitializer.getAdminUser());
+        zmsImpl.postTopLevelDomain(ctx, auditRef, testDomain);
+
+        ServiceIdentity service = new ServiceIdentity();
+        service.setName(ResourceUtils.serviceResourceName("athenz", "service_name"));
+        zmsImpl2.putServiceIdentity(ctx, "athenz", "service_name", auditRef, false, service);
+
+        // now let's disable the option. with the existing service, it should
+        // be allowed but non-existent service name with be rejected
+
+        zmsImpl2.allowUnderscoreInServiceNames = new DynamicConfigBoolean(Boolean.FALSE);
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "service-name"));
+        assertTrue(zmsImpl2.isValidServiceName("athenz", "service_name"));
+        assertFalse(zmsImpl2.isValidServiceName("athenz", "service_name2"));
+
+        zmsImpl2.deleteDomain(ctx, auditRef, "athenz", "unit-test");
+
         zmsImpl.objectStore.clearConnections();
+        zmsImpl2.objectStore.clearConnections();
     }
 
     @Test
@@ -21713,7 +21789,8 @@ public class ZMSImplTest {
         ZMSImpl zmsImpl = zmsTestInitializer.zmsInit();
         Domain domainMeta = new Domain().setName("dom1").setYpmId(123).setModified(Timestamp.fromCurrentTime())
                 .setAccount("1234").setAuditEnabled(true).setOrg("org").setAzureSubscription("4567")
-                .setBusinessService("123:business service").setGcpProject("gcp").setGcpProjectNumber("1240");
+                .setBusinessService("123:business service").setGcpProject("gcp").setGcpProjectNumber("1240")
+                .setProductId("abcd-123");
         SignedDomain domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, null);
         assertNull(domain.getDomain().getAccount());
         assertNull(domain.getDomain().getYpmId());
@@ -21723,6 +21800,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "unknown");
         assertNull(domain.getDomain().getAccount());
@@ -21733,6 +21811,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "account");
         assertEquals(domain.getDomain().getAccount(), "1234");
@@ -21743,6 +21822,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "ypmid");
         assertNull(domain.getDomain().getAccount());
@@ -21753,6 +21833,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "azuresubscription");
         assertEquals(domain.getDomain().getAzureSubscription(), "4567");
@@ -21763,6 +21844,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "gcpproject");
         assertEquals(domain.getDomain().getGcpProject(), "gcp");
@@ -21773,6 +21855,7 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getAuditEnabled());
         assertNull(domain.getDomain().getAzureSubscription());
         assertNull(domain.getDomain().getBusinessService());
+        assertNull(domain.getDomain().getProductId());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "businessservice");
         assertEquals(domain.getDomain().getBusinessService(), "123:business service");
@@ -21783,6 +21866,18 @@ public class ZMSImplTest {
         assertNull(domain.getDomain().getAzureSubscription());
         assertNull(domain.getDomain().getGcpProject());
         assertNull(domain.getDomain().getGcpProjectNumber());
+        assertNull(domain.getDomain().getProductId());
+
+        domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "productid");
+        assertEquals(domain.getDomain().getProductId(), "abcd-123");
+        assertNull(domain.getDomain().getAccount());
+        assertNull(domain.getDomain().getYpmId());
+        assertNull(domain.getDomain().getOrg());
+        assertNull(domain.getDomain().getAuditEnabled());
+        assertNull(domain.getDomain().getAzureSubscription());
+        assertNull(domain.getDomain().getGcpProject());
+        assertNull(domain.getDomain().getGcpProjectNumber());
+        assertNull(domain.getDomain().getBusinessService());
 
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "all");
         assertEquals(domain.getDomain().getAccount(), "1234");
@@ -21793,6 +21888,7 @@ public class ZMSImplTest {
         assertEquals(domain.getDomain().getOrg(), "org");
         assertTrue(domain.getDomain().getAuditEnabled());
         assertEquals(domain.getDomain().getBusinessService(), "123:business service");
+        assertEquals(domain.getDomain().getProductId(), "abcd-123");
 
         domainMeta.setAccount(null);
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "account");
@@ -21814,6 +21910,10 @@ public class ZMSImplTest {
         domainMeta.setAccount("1234");
         domainMeta.setYpmId(null);
         domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "ypmid");
+        assertNull(domain);
+
+        domainMeta.setProductId(null);
+        domain = zmsImpl.retrieveSignedDomainMeta(domainMeta, "productid");
         assertNull(domain);
 
         zmsImpl.objectStore.clearConnections();
@@ -21879,7 +21979,7 @@ public class ZMSImplTest {
         zmsTestInitializer.cleanupPrincipalSystemMetaDelete(zmsImpl);
 
         DomainList domList = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null);
         assertNotNull(domList);
 
         zmsImpl.privateKey = new ServerPrivateKey(Crypto.loadPrivateKey(Crypto.ybase64DecodeString(zmsTestInitializer.getPrivKey())), "0");
@@ -22071,6 +22171,7 @@ public class ZMSImplTest {
         dom1.setMemberExpiryDays(40);
         dom1.setGroupExpiryDays(50);
         dom1.setServiceExpiryDays(60);
+        dom1.setMemberPurgeExpiryDays(90);
 
         Authority authority = Mockito.mock(Authority.class);
         when(authority.getDateAttribute("user.testadminuser", "elevated-clearance")).thenReturn(new Date());
@@ -22100,6 +22201,7 @@ public class ZMSImplTest {
         assertEquals(Integer.valueOf(40), signedDomain.getDomain().getMemberExpiryDays());
         assertEquals(Integer.valueOf(50), signedDomain.getDomain().getGroupExpiryDays());
         assertEquals(Integer.valueOf(60), signedDomain.getDomain().getServiceExpiryDays());
+        assertEquals(Integer.valueOf(90), signedDomain.getDomain().getMemberPurgeExpiryDays());
 
         zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
         zmsImpl.userAuthority = savedAuthority;
@@ -30233,6 +30335,169 @@ public class ZMSImplTest {
     }
 
     @Test
+    public void testUpdateRoleMemberReviewAndExpirationDates() {
+
+        ZMSImpl zmsImpl = zmsTestInitializer.getZms();
+        RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
+        final String auditRef = zmsTestInitializer.getAuditRef();
+
+        final String domainName = "update-role";
+        final String roleName = "role1";
+
+        Timestamp t1 = Timestamp.fromMillis(1000);
+        Timestamp t2 = Timestamp.fromMillis(2000);
+        Timestamp t3 = Timestamp.fromMillis(3000);
+        Timestamp t4 = Timestamp.fromMillis(4000);
+
+        List<RoleMember> originalMembers = new ArrayList<>();
+        originalMembers.add(new RoleMember().setMemberName("user.joe")
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new RoleMember().setMemberName("user.jane")
+                .setReviewReminder(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new RoleMember().setMemberName("user.joseph")
+                .setReviewReminder(t1)
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new RoleMember().setMemberName("user.judy")
+                .setReviewReminder(t1)
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new RoleMember().setMemberName("user.johannes")
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+
+        List<RoleMember> updatedMembers = new ArrayList<>();
+        updatedMembers.add(new RoleMember().setMemberName("user.joe")
+                .setExpiration(t2)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new RoleMember().setMemberName("user.jane")
+                .setReviewReminder(t2)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new RoleMember().setMemberName("user.joseph")
+                .setReviewReminder(t3)
+                .setExpiration(t4)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new RoleMember().setMemberName("user.judy")
+                .setReviewReminder(t1)
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
+
+        // now let's create a role with user members only
+
+        Role role1 = zmsTestInitializer.createRoleObject(domainName, roleName, null, originalMembers);
+        zmsImpl.putRole(ctx, domainName, roleName, auditRef, false, role1);
+
+        // now let's get our role object
+
+        Role role = zmsImpl.getRole(ctx, domainName, roleName, false, false, false);
+        assertNotNull(role);
+
+        List<RoleMember> retrievedMembers = role.getRoleMembers();
+        assertNotNull(retrievedMembers);
+        assertEquals(retrievedMembers.size(), 5);
+        zmsTestInitializer.checkRoleMembersExpirationAndReviewDates(originalMembers, retrievedMembers);
+
+        // now let's update our role with the updated members
+
+        role1.setRoleMembers(updatedMembers);
+        zmsImpl.putRole(ctx, domainName, roleName, auditRef, false, role1);
+
+        // now let's get our role object
+
+        role = zmsImpl.getRole(ctx, domainName, roleName, false, false, false);
+        assertNotNull(role);
+
+        retrievedMembers = role.getRoleMembers();
+        assertNotNull(retrievedMembers);
+        assertEquals(retrievedMembers.size(), 4);
+        zmsTestInitializer.checkRoleMembersExpirationAndReviewDates(updatedMembers, retrievedMembers);
+
+        zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
+    }
+
+    @Test
+    public void testUpdateGroupMemberExpirationDate() {
+
+        ZMSImpl zmsImpl = zmsTestInitializer.getZms();
+        RsrcCtxWrapper ctx = zmsTestInitializer.getMockDomRsrcCtx();
+        final String auditRef = zmsTestInitializer.getAuditRef();
+
+        final String domainName = "update-group";
+        final String groupName = "group1";
+
+        Timestamp t1 = Timestamp.fromMillis(1000);
+        Timestamp t2 = Timestamp.fromMillis(2000);
+        Timestamp t3 = Timestamp.fromMillis(3000);
+
+        List<GroupMember> originalMembers = new ArrayList<>();
+        originalMembers.add(new GroupMember().setMemberName("user.joe")
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new GroupMember().setMemberName("user.jane")
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new GroupMember().setMemberName("user.joseph")
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new GroupMember().setMemberName("user.judy")
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        originalMembers.add(new GroupMember().setMemberName("user.johannes")
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+
+        List<GroupMember> updatedMembers = new ArrayList<>();
+        updatedMembers.add(new GroupMember().setMemberName("user.joe")
+                .setExpiration(t2)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new GroupMember().setMemberName("user.jane")
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new GroupMember().setMemberName("user.joseph")
+                .setExpiration(t3)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+        updatedMembers.add(new GroupMember().setMemberName("user.judy")
+                .setExpiration(t1)
+                .setPrincipalType(Principal.Type.USER.getValue()));
+
+        TopLevelDomain dom1 = zmsTestInitializer.createTopLevelDomainObject(domainName, "Test Domain1", "testOrg", zmsTestInitializer.getAdminUser());
+        zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
+
+        // now let's create a group with user members only
+
+        Group group1 = zmsTestInitializer.createGroupObject(domainName, groupName,  originalMembers);
+        zmsImpl.putGroup(ctx, domainName, groupName, auditRef, false, group1);
+
+        // now let's get our group object
+
+        Group group = zmsImpl.getGroup(ctx, domainName, groupName, false, false);
+        assertNotNull(group);
+
+        List<GroupMember> retrievedMembers = group.getGroupMembers();
+        assertNotNull(retrievedMembers);
+        assertEquals(retrievedMembers.size(), 5);
+        zmsTestInitializer.checkGroupMembersExpirationDate(originalMembers, retrievedMembers);
+
+        // now let's update our group with the updated members
+
+        group1.setGroupMembers(updatedMembers);
+        zmsImpl.putGroup(ctx, domainName, groupName, auditRef, false, group1);
+
+        // now let's get our group object
+
+        group = zmsImpl.getGroup(ctx, domainName, groupName, false, false);
+        assertNotNull(group);
+
+        retrievedMembers = group.getGroupMembers();
+        assertNotNull(retrievedMembers);
+        assertEquals(retrievedMembers.size(), 4);
+        zmsTestInitializer.checkGroupMembersExpirationDate(updatedMembers, retrievedMembers);
+
+        zmsImpl.deleteTopLevelDomain(ctx, domainName, auditRef);
+    }
+
+    @Test
     public void testUpdateRoleWithGroupMembers() {
 
         ZMSImpl zmsImpl = zmsTestInitializer.getZms();
@@ -31522,19 +31787,19 @@ public class ZMSImplTest {
 
         // domain-list no tags - all domains should be presented
         DomainList dl = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, null, null, null, null);
+                null, null, null, null, null, null, null, null, null, null, null);
         assertTrue(dl.getNames().containsAll(Arrays.asList(domainNoTags, domainName1, domainName2)));
 
         // domain-list with only tag-key, should include both domains
         dl = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, "tag-key", null, null, null);
+                null, null, null, null, null, null, "tag-key", null, null, null, null);
 
         assertEquals(dl.getNames().size(), 2);
         assertTrue(dl.getNames().containsAll(Arrays.asList(domainName1, domainName2)));
 
         // domain-list with tag-key AND tag-value, should include only domainName1
         dl = zmsImpl.getDomainList(ctx, null, null, null, null,
-                null, null, null, null, null, null, "tag-key", "val1", null, null);
+                null, null, null, null, null, null, "tag-key", "val1", null, null, null);
 
         assertEquals(dl.getNames().size(), 1);
         assertTrue(dl.getNames().contains(domainName1));
@@ -31755,10 +32020,22 @@ public class ZMSImplTest {
             assertTrue(ex.getMessage().contains("invalid product id"));
         }
 
+        try {
+            dom1.setGcpProject("valid-gcp-project");
+            dom1.setGcpProjectNumber("1200");
+            dom1.setYpmId(101);
+            dom1.setProductId("invalid-product-id");
+            zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
+            fail();
+        } catch (ResourceException ex) {
+            assertTrue(ex.getMessage().contains("invalid product id"));
+        }
+
         // specify gcp project but no project number
 
         try {
             dom1.setYpmId(101);
+            dom1.setProductId("valid-product-id");
             dom1.setGcpProject("valid-gcp-project");
             dom1.setGcpProjectNumber(null);
             zmsImpl.postTopLevelDomain(ctx, auditRef, dom1);
@@ -31938,6 +32215,15 @@ public class ZMSImplTest {
         }
 
         meta.setYpmId(101);
+        try {
+            meta.setProductId("invalid-product-id");
+            zmsImpl.putDomainSystemMeta(ctx, domainName, ZMSConsts.SYSTEM_META_PRODUCT_ID, auditRef, meta);
+            fail();
+        } catch (ResourceException ex) {
+            assertTrue(ex.getMessage().contains("invalid product id"));
+        }
+
+        meta.setProductId("valid-product-id");
         zmsImpl.putDomainSystemMeta(ctx, domainName, ZMSConsts.SYSTEM_META_PRODUCT_ID, auditRef, meta);
 
         domain = zmsImpl.getDomain(ctx, domainName);
@@ -32048,6 +32334,7 @@ public class ZMSImplTest {
         assertEquals("azureSub", zmsImpl.getDomainMetaStoreValidValuesList(ctx, "azureSubscription", null).getValidValues().get(0));
         assertEquals("gcpProject", zmsImpl.getDomainMetaStoreValidValuesList(ctx, "gcpProject", null).getValidValues().get(0));
         assertEquals("product", zmsImpl.getDomainMetaStoreValidValuesList(ctx, "productId", null).getValidValues().get(0));
+        assertEquals("product", zmsImpl.getDomainMetaStoreValidValuesList(ctx, "productNumber", null).getValidValues().get(0));
         zmsImpl.domainMetaStore = savedMetaStore;
     }
 
@@ -33455,6 +33742,15 @@ public class ZMSImplTest {
         Group group3 = zmsImpl.getGroup(ctx, "test-domain3", "group3", null, null);
         assertEquals(role3.getRoleMembers().size(), 5);
         assertEquals(group3.getGroupMembers().size(), 5);
+
+        // try with invalid flag
+
+        try {
+            zmsImpl.deleteExpiredMembers(ctx, 4, auditRef, false);
+            fail();
+        } catch (ResourceException ex) {
+            assertTrue(ex.getMessage().contains("should be a number in [0-3]"));
+        }
 
         zmsImpl.deleteTopLevelDomain(ctx, "test-domain1", auditRef);
         zmsImpl.deleteTopLevelDomain(ctx, "test-domain2", auditRef);
